--- a/ProyectoBlazorJL/BlazorJL/Pages/Index.razor
+++ b/ProyectoBlazorJL/BlazorJL/Pages/Index.razor
@@ -1,9 +1,22 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<AuthorizeView Roles="Administrador">
+    <Authorized Context="AuthenticationState">
+        <h1>Bienvenido Administrador</h1>
+    </Authorized>
+</AuthorizeView>
 
-<h1>Hello, world!</h1>
+<AuthorizeView Roles="Usuario">
+    <Authorized Context="AuthenticationState">
+        <h1>Bienvenido Usuario</h1>
+    </Authorized>
+</AuthorizeView>
 
-Welcome to your new app.
+<AuthorizeView>
+    <NotAuthorized>
+        <h2>Debe identificarse para poder acceder a la aplicación</h2>
+    </NotAuthorized> 
+</AuthorizeView>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+@*ES EL SEGUNDO FORMULARIO QUE SE MUESTRA*@
