--- a/ProyectoBlazorJL/BlazorJL/Pages/UsuariosPage/ListaUsuarios.razor
+++ b/ProyectoBlazorJL/BlazorJL/Pages/UsuariosPage/ListaUsuarios.razor
@@ -3,6 +3,13 @@
 <h3>Lista de Usuarios</h3>
 
 
+<div class"form-group row">
+    <div class="col-sm-2">
+        <a href="/Usuarios/Nuevo" class="btn btn-primary">Nuevo Usuario</a>
+    </div>
+</div>
+
+
 @if (usuariosLista == null)
 {
     <div class="spinner"></div>
