--- a/ProyectoBlazorJL/BlazorJL/Pages/_Layout.cshtml
+++ b/ProyectoBlazorJL/BlazorJL/Pages/_Layout.cshtml
@@ -28,5 +28,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetAlert2.min.js"></script>
+
 </body>
 </html>
